--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "Hesiir-components",
-  "version": "0.1.2",
+  "name": "hesiir-components",
+  "version": "0.1.5",
   "description": "react/reactNative components",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development babel-node ./helper/http.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "midcreate": "./bin/midcreate.sh"
   },
   "repository": {
     "type": "git",
@@ -27,41 +24,45 @@
   },
   "homepage": "https://github.com/Hesiir/components#readme",
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chalk": "^1.1.3",
-    "crypto": "0.0.3",
-    "file-exists": "^2.0.0",
-    "gulp": "^3.9.1",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.16.2",
-    "require-dir": "^0.3.0",
     "autoprefixer": "^6.4.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "chalk": "^1.1.3",
+    "cors": "^2.8.1",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
+    "file-exists": "^2.0.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.16.2",
     "morgan": "^1.7.0",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
+    "react-dom": "^15.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-router": "^2.8.1",
+    "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.3.1",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.1",
     "webpack-dev-server": "^1.16.1",
-    "webpack-stream": "^3.2.0",
-    "react-router": "^2.8.1",
-    "react-dom": "^15.3.1"
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "iscroll": "^5.2.0",
     "react": "^15.3.1",
-    "react-iscroll": "^1.1.0"
+    "react-dotdotdot": "^1.0.17",
+    "react-motion": "^0.4.5",
+    "react-truncate": "^2.0.1"
   }
 }
