--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/Hesiir/components#readme",
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "autoprefixer": "^6.4.1",
+    "awesome-typescript-loader": "^3.0.0-beta.13",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -44,7 +46,7 @@
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "lodash": "^4.16.2",
+    "lodash": "^4.17.2",
     "morgan": "^1.7.0",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
@@ -57,8 +59,7 @@
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.1",
     "webpack-dev-server": "^1.16.1",
-    "webpack-stream": "^3.2.0",
-    "@kadira/storybook": "^2.21.0"
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
