--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   },
   "homepage": "https://github.com/Hesiir/components#readme",
   "devDependencies": {
+    "@kadira/react-storybook-addon-info": "^3.3.0",
     "@kadira/storybook": "^2.21.0",
+    "@kadira/storybook-addon-knobs": "^1.7.1",
+    "@kadira/storybook-addon-notes": "^1.0.1",
+    "@kadira/storybook-addon-options": "^1.0.1",
     "autoprefixer": "^6.4.1",
     "awesome-typescript-loader": "^3.0.0-beta.13",
     "babel-core": "^6.14.0",
@@ -38,6 +42,7 @@
     "chalk": "^1.1.3",
     "cors": "^2.8.1",
     "crypto": "0.0.3",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "file-exists": "^2.0.0",
     "gulp": "^3.9.1",
@@ -50,10 +55,12 @@
     "morgan": "^1.7.0",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
+    "raw-loader": "^0.5.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^2.8.1",
     "require-dir": "^0.3.0",
+    "storybook-readme": "^1.2.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.3.1",
     "webpack": "^2.1.0-beta.25",
