--- a/.npmignore
+++ b/.npmignore
@@ -17,6 +17,7 @@ Thumbs.db
 # npm
 node_modules
 npm-debug.log
+yarn-error.log
 
 # project files
 *.test.js
@@ -28,4 +29,5 @@ typings/
 .gitignore
 tsconfig.json
 typings.json
-.__DLLs/
+.storybook/
+stories/
