--- a/package.json
+++ b/package.json
@@ -1,78 +1,43 @@
 {
-  "name": "hesiir-components",
-  "version": "0.1.5",
-  "description": "react/reactNative components",
-  "main": "index.js",
-  "scripts": {
-    "start": "start-storybook -p 6006",
-    "build:lib": "NODE_ENV=production node ../helper/build_lib.js",
-    "build-storybook": "build-storybook"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Hesiir/components.git"
-  },
-  "keywords": [
-    "Hesiir",
-    "react",
-    "reactNative",
-    "component"
-  ],
-  "author": "Orlo Wang",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Hesiir/components/issues"
-  },
-  "homepage": "https://github.com/Hesiir/components#readme",
-  "devDependencies": {
-    "@kadira/react-storybook-addon-info": "^3.3.0",
-    "@kadira/storybook": "^2.21.0",
-    "@kadira/storybook-addon-knobs": "^1.7.1",
-    "@kadira/storybook-addon-notes": "^1.0.1",
-    "@kadira/storybook-addon-options": "^1.0.1",
-    "autoprefixer": "^6.4.1",
-    "awesome-typescript-loader": "^3.0.0-beta.13",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "chalk": "^1.1.3",
-    "cors": "^2.8.1",
-    "crypto": "0.0.3",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "file-exists": "^2.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-browserify": "^0.5.1",
-    "gulp-util": "^3.0.7",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.17.2",
-    "morgan": "^1.7.0",
-    "postcss-loader": "^0.13.0",
-    "precss": "^1.4.0",
-    "raw-loader": "^0.5.1",
-    "react-dom": "^15.3.1",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-router": "^2.8.1",
-    "require-dir": "^0.3.0",
-    "storybook-readme": "^1.2.0",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^2.3.1",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.8.1",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-stream": "^3.2.0"
-  },
-  "dependencies": {
-    "classnames": "^2.2.5",
-    "iscroll": "^5.2.0",
-    "react": "^15.3.1",
-    "react-dotdotdot": "^1.0.17",
-    "react-motion": "^0.4.5",
-    "react-truncate": "^2.0.1"
-  }
+    "name": "xian",
+    "version": "0.1.0",
+    "description": "react web components",
+    "main": "index.js",
+    "scripts": {
+        "start": "start-storybook -p 6006",
+        "create": "node scripts/create_component.js",
+        "delete": "node scripts/delete_component.js",
+        "build:lib": "NODE_ENV=production node ../helper/build_lib.js",
+        "build-storybook": "build-storybook"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Hesiir/xian.git"
+    },
+    "keywords": [
+        "xian",
+        "react",
+        "component"
+    ],
+    "author": "Orlo Wang",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Hesiir/xian/issues"
+    },
+    "homepage": "https://github.com/Hesiir/xian#readme",
+    "devDependencies": {
+        "@kadira/react-storybook-addon-info": "^3.4.0",
+        "@kadira/storybook": "^2.35.3",
+        "@kadira/storybook-addon-knobs": "^1.7.1",
+        "@kadira/storybook-addon-notes": "^1.0.1",
+        "@kadira/storybook-addon-options": "^1.0.2",
+        "chalk": "^1.1.3",
+        "lodash": "^4.17.4",
+        "mkdirp": "^0.5.1",
+        "raw-loader": "^0.5.1",
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
+        "rimraf": "^2.6.1",
+        "storybook-readme": "^2.0.2"
+    }
 }
