--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     },
     "homepage": "https://github.com/Hesiir/xian#readme",
     "devDependencies": {
-        "@kadira/react-storybook-addon-info": "^3.4.0",
-        "@kadira/storybook": "^2.35.3",
-        "@kadira/storybook-addon-knobs": "^1.7.1",
-        "@kadira/storybook-addon-notes": "^1.0.1",
-        "@kadira/storybook-addon-options": "^1.0.2",
+        "@storybook/addon-info": "^3.1.9",
+        "@storybook/addon-knobs": "3.1.9",
+        "@storybook/addon-notes": "3.1.6",
+        "@storybook/addon-options": "3.1.6",
+        "@storybook/react": "3.1.9",
         "chalk": "^1.1.3",
         "lerna": "^2.0.0-rc.4",
         "lodash": "^4.17.4",
@@ -41,6 +41,6 @@
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
         "rimraf": "^2.6.1",
-        "storybook-readme": "^2.0.2"
+        "storybook-readme": "^3.0.5"
     }
 }
