--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,17 @@
 {
-  "lerna": "2.0.0-rc.4",
+  "lerna": "2.0.0",
   "commands": {
     "bootstrap": {
       "ignore": []
+    },
+    "publish": {
+      "ignore": []
     }
   },
+  "npmClient": "npm",
   "packages": [
     "packages/*",
     "packages/**/*"
   ],
-  "version": "0.0.2"
+  "version": "0.0.3"
 }
