--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,7 @@
       "ignore": []
     }
   },
-  "npmClient": "npm",
+  "npmClient": "yarn",
   "packages": [
     "packages/*",
     "packages/**/*"
