--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "react web components",
     "main": "index.js",
     "scripts": {
-        "bootstrap": "lerna bootstrap",
         "start": "start-storybook -p 6006",
+        "lerna": "lerna init",
+        "bootstrap": "lerna bootstrap",
+        "release": "lerna publish",
         "create": "node scripts/create_component.js",
         "delete": "node scripts/delete_component.js",
         "update": "node scripts/update_component.js",
@@ -34,7 +36,7 @@
         "@storybook/addon-options": "3.1.6",
         "@storybook/react": "3.1.9",
         "chalk": "^1.1.3",
-        "lerna": "^2.0.0-rc.4",
+        "lerna": "^2.0.0",
         "lodash": "^4.17.4",
         "mkdirp": "^0.5.1",
         "raw-loader": "^0.5.1",
