--- a/packages/#hoc/rscroll/package.json
+++ b/packages/#hoc/rscroll/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@hoc/rscroll",
+    "name": "#hoc/rscroll",
     "version": "0.0.4",
     "description": "",
     "main": "index.js",
